/*
 * $Id: ChangeLog,v 1.2626 2004/03/22 14:00:56 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2004-03-22 18:54 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  ! source/vm/hvm.c
    ! hb_vmInit() to build on OS/2 GCC HB_Trace() call must be after EXCEPTIONREGISTRATIONRECORD
      definition, really don't know why :|

2004-03-22 11:06 UTC-0300 Luiz Rafael Culik Guimaraes<culikr@brturbo.com>
  ! contrib/hbzlib/zipnew.cpp
  ! contrib/hbzlib/zip.c
    ! Fixed related to change directory and not restoring on exist
    provided by sylvain robert and fixes problem reported on news://news.xharbour.com

2004-03-22 1:35 UTC-0800 Brian Hays <bhays@abacuslaw.com>
  * contrib/rdd_ads/ads1.c
      Added fix from Luis Krause Mantilla for adsOrderListFocus().
      NTX and CDX behave differently when an invalid index/tag is requested.
      CDX sets the order to 0, but NTX leaves it to the current order, if any.
      This change makes ADSNTX behave in compatibility mode with
      Clipper's (And xHarbour's) NTX RDD

2004-03-21 19:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
  * source/macro/macro.slx
    - Removed unused variables.

  * source/rtl/math.c
    ! Fixed serious bugs in hb_matherrblock()
    * Fromating and minor optimization

  * source/rtl/win32ole.prg
    + Added support for VT_ARRAY of VT_DSPATCH - contributed by Oscar Hernandez Suarez <oscar@oscarweb.com>

2004-03-21 23:00 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   * some workaround for GCC3 optimization bug. I marked at the code
     where is the problem and added alternate code which is compiled
     correctly by GCC3.3.2 and -O2 but works on little endian machines
     only. I do not plan to work longer on this problem - it's a waste